<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartagriculture.FarmerProfile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:fontFamily="@font/cambay"
            android:gravity="center"
            android:text="@string/txt_farmer_profile_title_txt"
            android:textAlignment="center"
            android:textColor="@color/txtLabelColor"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:civ_border_color="#70ffffff"
                    app:civ_border_width="4dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:id="@+id/detailsGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/txtbox_bg"
                        android:fontFamily="@font/cambay"
                        android:paddingStart="10dp"
                        android:text="@string/farmer_profile_seg1_heading_txt"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/login_txt_name_hint">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtName"
                            style="@style/custom_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/login_txt_area_hint">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtArea"
                            style="@style/custom_text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <Button
                        android:id="@+id/btnEditUpdate"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_trans"
                        android:text="@string/farmer_profile_btn_edit_txt"
                        android:textSize="18sp" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:id="@+id/idGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button_trans"
                            android:fontFamily="@font/cambay"
                            android:paddingStart="10dp"
                            android:text="@string/farmer_profile_seg2_heading_txt"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/btnCert"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/button_trans"
                            android:fontFamily="@font/cambay"
                            android:paddingStart="10dp"
                            android:text="@string/farmer_profile_seg3_heading_txt"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                        <Button
                            android:id="@+id/btnSelPic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@drawable/button_trans"
                            android:text="@string/farmer_profile_selec_image_btn_txt" />

                        <Button
                            android:id="@+id/btnChangePic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"
                            android:background="@drawable/button_trans"
                            android:text="@string/farmer_profile_change_image_btn_txt" />

                        <ImageView
                            android:id="@+id/formPic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:adjustViewBounds="true"
                            android:maxHeight="200dp"
                            android:scaleType="fitCenter"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/txtStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/txtbox_bg"
                            android:fontFamily="@font/cambay"
                            android:text="@string/farmer_profile_approval_status_checking"
                            android:textColor="@color/txtLabelColor"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/btnCallHq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_trans"
                    android:text="@string/farmer_profile_call_hq_btn_txt"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/btnSignOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_trans"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="@string/farmer_profile_btnsignout_txt"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>
