<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerOrders">

    <LinearLayout
        android:id="@+id/layoutOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbox_bg"
                android:fontFamily="@font/cambay"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/customer_orders_list_heading"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <ListView
                android:id="@+id/ordersList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:listitem="@layout/cart_list_item_layout" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <CheckBox
                android:id="@+id/checkUrgent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/txtbox_bg"
                android:fontFamily="@font/cambay"
                android:text="@string/customer_orders_urgent_check_txt"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_trans"
                android:text="@string/customer_orders_confirm_order_btn_txt"
                android:textAlignment="center"
                android:textColor="@color/buttonText"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEmptyOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambay"
            android:text="@string/customer_orders_empty_orders_txt"
            android:textAlignment="center"
            android:textColor="@color/txtLabelColor"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/empty_drawer" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnShop"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_trans"
            android:fontFamily="@font/cambay"
            android:text="@string/customer_orders_start_shopping_text"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSubmitSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cambay"
            android:text="@string/customer_orders_submit_success_txt"
            android:textAlignment="center"
            android:textColor="@color/txtLabelColor"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/imageView56"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/success" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnConShop"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_trans"
            android:fontFamily="@font/cambay"
            android:text="@string/customer_orders_continue_shopping_txt"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>